# cookie-clicker-clicker

./: Cookie Clicker.side  clicker.py  pyproject.toml  requirements.txt
